--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div id="resultsSection" style="display: none;">
-        <h2>Results: Analyzed Squares</h2>
+        <h2>Results: Analyzed Squares <span id="average-color"></span></h2>
         <div class="squares-list" id="squaresList"></div>
     </div>
 </div>
