Update color matcher display and improve UI elements

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div id="colorsSection" style="display: none;">
-        <h2>Step 3: Select Colours to Match</h2>
+        <h2>Step 3: Add Colours to Match</h2>
         <div class="color-inputs">
             <table class="color-table">
                 <thead>
